dashboard cash value fix

--- a/accounts/templates/accounts/forgot_password.html
+++ b/accounts/templates/accounts/forgot_password.html
@@ -3,6 +3,7 @@
 <head>
     <title>Forgot Password</title>
     {% load static %}
+    <link rel="icon" type="image/png" href="{% static 'img/logo.png' %}">
     <link rel="stylesheet" href="{% static 'css/registered.css' %}">
 </head>
 <body>
