--- a/reports/templates/reports/budget_summary.html
+++ b/reports/templates/reports/budget_summary.html
@@ -1,6 +1,7 @@
 {# templates/reports/budget_summary.html #}
 {% extends 'base.html' %}
 {% load static %}
+<link rel="icon" type="image/png" href="{% static 'img/logo.png' %}">
 {% block content %}
 <script src="https://www.gstatic.com/charts/loader.js"></script>
 <script>
