--- a/transactions/templates/transactions/history.html
+++ b/transactions/templates/transactions/history.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 {% load static %}
+<link rel="icon" type="image/png" href="{% static 'img/logo.png' %}">
 <head>
-  <title>MoneyParce - Transactions</title>
+  <title>MoneyParce</title>
   <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap"
       rel="stylesheet" />
