--- a/accounts/templates/accounts/register.html
+++ b/accounts/templates/accounts/register.html
@@ -1,6 +1,7 @@
 
 <!DOCTYPE html>
 {% load static %}
+<link rel="icon" type="image/png" href="{% static 'img/logo.png' %}">
 <html lang="en">
 <head>
   <meta charset="UTF-8">
