--- a/dashboard/templates/base.html
+++ b/dashboard/templates/base.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 {% load static %}
+<link rel="icon" type="image/png" href="{% static 'img/logo.png' %}">
 <head>
-  <title>MoneyParce Overview</title>
+  <title>MoneyParce</title>
   <link
       href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Irish+Grover&family=Passion+One:wght@400;700;900&display=swap"
       rel="stylesheet" />
