--- a/dashboard/templates/settings/settings.html
+++ b/dashboard/templates/settings/settings.html
@@ -6,12 +6,13 @@
 </div>
 
 <div class="innerWrapper">
-  <!-- Plaid Link Button -->
-  <div class="whiteBox">
-    <div class="whiteBoxTitle"></div>
-    <div class="whiteBoxTitle"></div>
-    <button id="link-button" class="addBtn">Link a Bank Account</button>
-    <button onclick="window.location.href='{% url 'logout' %}';" class="addBtn">Logout</button>
+  <!-- Account Settings -->
+  <div class="whiteBox" style="width: 600px; margin: 0 auto;">
+    <div style="display: flex; flex-direction: column; align-items: center; width: 100%; margin-top: 120px;">
+      <button id="link-button" class="addBtn" style="margin-bottom: 15px; width: 50%;">Link a Bank Account</button>
+      <button onclick="window.location.href='{% url 'delete_account' %}';" class="addBtn" style="margin-bottom: 15px; width: 50%;">Delete Account</button>
+      <button onclick="window.location.href='{% url 'logout' %}';" class="addBtn" style="margin-bottom: 15px; width: 50%;">Logout</button>
+    </div>
   </div>
 
   <!-- Plaid Link Script -->
