--- a/dashboard/templates/base.html
+++ b/dashboard/templates/base.html
@@ -53,6 +53,9 @@
     </div>
 
     <div class="mainWrapper">
+      <div class="header">
+        <div class="pageTitle">{% block page_title %}{% endblock %}</div>
+      </div>
         {% block content %} {% endblock content %}
     </div>
 
