--- a/dashboard/templates/dashboard/dashboard.html
+++ b/dashboard/templates/dashboard/dashboard.html
@@ -1,11 +1,12 @@
 {# templates/dashboard/dashboard.html #}
 {% extends 'base.html' %}
 {% load static %}
+{% block page_title %}
+  Overview
+{% endblock %}
 <link rel="icon" type="image/png" href="{% static 'img/logo.png' %}">
 {% block content %}
-<div class="header">
-  <div class="pageTitle">Overview</div>
-</div>
+
 
 {% if messages %}
 <div class="messages">
