--- a/dashboard/templates/settings/settings.html
+++ b/dashboard/templates/settings/settings.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 {% load static %}
+{% block page_title %}
+  Settings
+{% endblock %}
 {% block content %}
-<div class="header">
-  <div class="pageTitle">Settings</div>
-</div>
 
 <div class="innerWrapper">
   <!-- Account Settings -->
