--- a/transactions/templates/transactions/history.html
+++ b/transactions/templates/transactions/history.html
@@ -1,10 +1,11 @@
 {% extends 'base.html' %}
 {% load static %}
+{% block page_title %}
+  Transactions
+{% endblock %}
 <link rel="icon" type="image/png" href="{% static 'img/logo.png' %}">
 {% block content %}
-<div class="header">
-  <div class="pageTitle">Transactions</div>
-</div>
+
 <!-- Main Content -->
 <div class="main-content">
    <div class="content">
