--- a/reports/templates/reports/budget_summary.html
+++ b/reports/templates/reports/budget_summary.html
@@ -80,5 +80,5 @@
   <button class="chartBtn"           onclick="drawChart('monthly'); setActive(this);">This Month</button>
 </div>
 
-<div id="chart_div"></div>
+<div class="chartWrapper" id="chart_div"></div>
 {% endblock %}
