--- a/dashboard/templates/settings/settings.html
+++ b/dashboard/templates/settings/settings.html
@@ -7,11 +7,11 @@
 
 <div class="innerWrapper">
   <!-- Account Settings -->
-  <div class="whiteBox" style="width: 600px; margin: 0 auto;">
+  <div class="settingWrapper">
     <div style="display: flex; flex-direction: column; align-items: center; width: 100%; margin-top: 120px;">
       <button id="link-button" class="addBtn" style="margin-bottom: 15px; width: 50%;">Link a Bank Account</button>
       <button onclick="window.location.href='{% url 'delete_account' %}';" class="addBtn" style="margin-bottom: 15px; width: 50%;">Delete Account</button>
-      <button onclick="window.location.href='{% url 'logout' %}';" class="addBtn" style="margin-bottom: 15px; width: 50%;">Logout</button>
+      <button onclick="window.location.href='{% url 'logout' %}';" class="logoutBtn" style="margin-bottom: 15px; width: 50%;">Logout</button>
     </div>
   </div>
 
