--- a/accounts/templates/accounts/forgot_password.html
+++ b/accounts/templates/accounts/forgot_password.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Forgot Password</title>
+    <title>Reset Password</title>
     {% load static %}
     <link rel="icon" type="image/png" href="{% static 'img/logo.png' %}">
     <link rel="stylesheet" href="{% static 'css/registered.css' %}">
@@ -10,8 +10,8 @@
     <div class="register-wrapper">
         <div class="card">
             <div class="card-body">
-                <h2>Forgot Password</h2>
-                <hr />
+                <h2>Reset Password</h2>
+
                 <form method="POST">
                     {% csrf_token %}
                     <input type="text" id="username" name="username" placeholder="Enter your username" required style="margin-bottom: 35px;">
