--- a/accounts/templates/accounts/register.html
+++ b/accounts/templates/accounts/register.html
@@ -14,13 +14,19 @@
     <div class="card">
       <div class="card-body">
         <h2>Sign Up</h2>
-        <hr />
+
         <form method="POST">
           {% csrf_token %}
           {{ template_data.form.as_p }}
           <button type="submit" class="btn">Sign Up</button>
         </form>
       </div>
+
+      <div class="descWrapper">
+        <div class="desc">Already have an account? </div>
+        <a class ="loginBtn" href="{% url 'login' %}">Log in</a>
+      </div>
+      
     </div>
   </div>
   {% endblock content %}
