--- a/reports/templates/reports/budget_summary.html
+++ b/reports/templates/reports/budget_summary.html
@@ -1,39 +1,60 @@
+{# templates/reports/budget_summary.html #}
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
-<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-    <script>
-        google.charts.load("current", {packages:["corechart"]});
-        google.charts.setOnLoadCallback(drawChart);
+<script src="https://www.gstatic.com/charts/loader.js"></script>
+<script>
+  const categoryData = JSON.parse('{{ category_json|escapejs }}');
+  const monthlyData  = JSON.parse('{{ daily_json|escapejs }}');
 
-        function drawChart() {
-            const chartData = JSON.parse('{{ chart_data_json|escapejs }}');
-            const data = google.visualization.arrayToDataTable(chartData);
+  google.charts.load('current', {packages:['corechart']});
+  google.charts.setOnLoadCallback(() => drawChart('bar'));
 
-            const options = {
-                title: 'Budget Usage by Category',
-                isStacked: true,
-                hAxis: {
-                    title: 'Amount',
-                    minValue: 0,
-                },
-                vAxis: {
-                    title: 'Category'
-                },
-                chartArea: {width: '70%', height: '70%'},
-                colors: [ '#1E1E24','#92140C'],
-            };
+  const COLORS = ['#1E1E24','#92140C'];
 
-            const chart = new google.visualization.BarChart(document.getElementById('chart_div'));
-            chart.draw(data, options);
-        }
-    </script>
+  function drawChart(type){
+    let data, chart, options = {title:'Budget Report', colors:COLORS};
 
-<div class="header">
-    <div class="pageTitle">Summary Report</div>
+    switch(type){
+      case 'monthly':
+        data   = google.visualization.arrayToDataTable(monthlyData);
+        options = {
+          title:'Spending This Month',
+          hAxis:{title:'Date'},
+          vAxis:{title:'Amount'},
+          legend:'none'
+        };
+        chart  = new google.visualization.LineChart(document.getElementById('chart_div'));
+        break;
+
+      case 'pie':
+        data   = google.visualization.arrayToDataTable(categoryData);
+        chart  = new google.visualization.PieChart(document.getElementById('chart_div'));
+        break;
+
+      default:
+        data   = google.visualization.arrayToDataTable(categoryData);
+        options.isStacked = true;
+        options.hAxis={title:'Amount',minValue:0};
+        options.vAxis={title:'Category'};
+        chart  = new google.visualization.BarChart(document.getElementById('chart_div'));
+    }
+    chart.draw(data, options);
+  }
+
+  function setActive(btn){
+    document.querySelectorAll('.chartBtn').forEach(b=>b.classList.remove('activeBtn'));
+    btn.classList.add('activeBtn');
+  }
+</script>
+
+<div class="header"><div class="pageTitle">Summary Report</div></div>
+
+<div class="chartToolbar">
+  <button class="chartBtn activeBtn" onclick="drawChart('bar');     setActive(this);">Stacked Bar</button>
+  <button class="chartBtn"           onclick="drawChart('pie');     setActive(this);">Pie</button>
+  <button class="chartBtn"           onclick="drawChart('monthly'); setActive(this);">This Month</button>
 </div>
 
-<div class="chartWrapper">
-    <div id="chart_div"></div>
-</div>
-{% endblock content %}
+<div id="chart_div"></div>
+{% endblock %}
