--- a/reports/templates/reports/budget_summary.html
+++ b/reports/templates/reports/budget_summary.html
@@ -10,15 +10,35 @@
   google.charts.load('current', {packages:['corechart']});
   google.charts.setOnLoadCallback(() => drawChart('bar'));
 
-  const COLORS = ['#1E1E24','#92140C'];
+  const PIE_COLORS = [
+  '#92140C',  
+  '#BF3B2F',
+  '#1E1E24', 
+  '#4B4B50', 
+  '#F5F0EC', 
+  '#D9CFC3', 
+  '#E6B8A2', 
+  '#A5A5A5',
+];
+  const BAR_COLORS = ['#1E1E24', '#92140C'];
+  const LINE_COLOR = ['#92140C']
+
 
   function drawChart(type){
-    let data, chart, options = {title:'Budget Report', colors:COLORS};
+    let dataArr = (type === 'monthly') ? monthlyData : categoryData;
+    if (dataArr.length <= 1) {
+    document.getElementById('chart_div').innerHTML = 
+      "<p>No transactions found. Start by adding income or expenses.</p>";
+    return;
+  }
+
+    let chart, options = {title:'Budget Report', theme:'material'};
 
     switch(type){
       case 'monthly':
         data   = google.visualization.arrayToDataTable(monthlyData);
         options = {
+          colors: LINE_COLOR,
           title:'Spending This Month',
           hAxis:{title:'Date'},
           vAxis:{title:'Amount'},
@@ -28,6 +48,7 @@
         break;
 
       case 'pie':
+        options.colors = PIE_COLORS;
         data   = google.visualization.arrayToDataTable(categoryData);
         chart  = new google.visualization.PieChart(document.getElementById('chart_div'));
         break;
@@ -35,6 +56,7 @@
       default:
         data   = google.visualization.arrayToDataTable(categoryData);
         options.isStacked = true;
+        options.colors = BAR_COLORS;
         options.hAxis={title:'Amount',minValue:0};
         options.vAxis={title:'Category'};
         chart  = new google.visualization.BarChart(document.getElementById('chart_div'));
