--- a/transactions/templates/transactions/history.html
+++ b/transactions/templates/transactions/history.html
@@ -61,7 +61,7 @@
                     </td>
 
                     <!-- Description -->
-                    <td class="desc-column">
+                    <td class="desc-column" style="padding-left: 284px;">
                       {% if transaction.type == 'Income' %}
                         Income Payment
                       {% else %}
