--- a/transactions/templates/transactions/history.html
+++ b/transactions/templates/transactions/history.html
@@ -1,9 +1,16 @@
 {% extends 'base.html' %}
 {% load static %}
+<link
+href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Irish+Grover&family=Passion+One:wght@400;700;900&display=swap"
+rel="stylesheet" />
+<link rel="stylesheet" 
+  type="text/css" 
+  href="{% static 'css/style.css' %}" /> 
 {% block page_title %}
   Transactions
 {% endblock %}
 <link rel="icon" type="image/png" href="{% static 'img/logo.png' %}">
+
 {% block content %}
 
 <!-- Main Content -->
