--- a/accounts/templates/accounts/delete_account.html
+++ b/accounts/templates/accounts/delete_account.html
@@ -1,10 +1,9 @@
 {% extends 'base.html' %}
 {% load static %}
+{% block page_title %}
+  Delete Account
+{% endblock %}
 {% block content %}
-<div class="header">
-  <div class="pageTitle">Delete Account</div>
-</div>
-
 <div class="innerWrapper">
   <div class="whiteBox" style="width: 600px; margin: 0 auto; height: 500px;">
     <div class="whiteBoxTitle" style="margin-right: auto; margin-left: 40px; margin-top: 40px; color: #92140C;">Warning</div>
