--- a/dashboard/templates/base.html
+++ b/dashboard/templates/base.html
@@ -3,6 +3,7 @@
 {% load static %}
 <link rel="icon" type="image/png" href="{% static 'img/logo.png' %}">
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.25, user-scalable=no">
   <title>MoneyParce</title>
   <link
       href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Irish+Grover&family=Passion+One:wght@400;700;900&display=swap"
